[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftgalaxy"
version="2.2.2"
authors = [
    { name="Kyle Oman", email="kyle.a.oman@durham.ac.uk" },
]
description="Code abstraction of objects (galaxies) in simulations."
readme = "README.rst"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "unyt",
    "swiftsimio>=10.0.0",
]

[project.urls]
"Homepage" = "https://github.com/SWIFTSIM/swiftgalaxy"
"Bug Tracker" = "https://github.com/SWIFTSIM/swiftgalaxy/issues"
"Documentation" = "https://swiftgalaxy.readthedocs.io/en/latest"

[project.optional-dependencies]
velociraptor = ["velociraptor", "tqdm"]

[tool.numpydoc_validation]
checks = [
       "GL01",
       "GL02",
       "GL03",
       "GL05",
       "GL06",
       "GL07",
       "GL08",
       "GL10",
       "SS01",
       "SS02",
       "SS03",
       "SS04",
       "PR01",
       "PR02",
       "PR03",
       "PR04",
       "PR05",
       "PR06",
       "PR07",
       "PR08",
       "PR10",
       "RT03",
       "RT04",
       "RT05",
]
exclude = [
	'\.__init__$',
	"__init__",
	"__version__",
]
